--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,9 +12,12 @@ repository = "https://github.com/yourusername/pylogger"
 python = "^3.8"
 rich = "^10.0"
 
-[tool.poetry.dev-dependencies]
-pytest = "^6.2"
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.3.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+pythonpath = "src"
