--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ rich = "^10.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.2"
+ruff = "^0.6.4"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
